--- a/modelo.html
+++ b/modelo.html
@@ -1,105 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Conteúdo Programático CT&I</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Título do Subtítulo</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Banner Principal -->
-  <header class="header">
-    <div class="container">
-      <h1><i class="fas fa-book-open"></i> Conteúdo Programático</h1>
-      <p>CT&I • Conhecimentos Gerais & Específicos</p>
-    </div>
-  </header>
-
-  <!-- Container da Página Individual -->
-  <main class="main-content">
-    <div class="container">
-
-      <!-- Botão Voltar -->
-      <div style="margin-bottom: 20px;">
-        <a href="index.html" class="back-btn">
-          <i class="fas fa-arrow-left"></i> Voltar
-        </a>
-      </div>
-
-      <!-- Título da Seção -->
-      <section class="content-section">
-        <h2 id="titulo-secao">Título da Seção</h2>
-
-        <!-- Espaço para Vídeo (opcional) -->
-        <div class="video-container" id="videoContainer">
-          <!-- Exemplo: YouTube -->
-          <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/EXEMPLO" frameborder="0" allowfullscreen></iframe> -->
+    <header>
+        <div class="header-container">
+            <h1>Título do Subtítulo</h1>
+            <p>Conteúdo Programático · CT&I</p>
         </div>
+    </header>
 
-        <!-- Conteúdo Detalhado -->
-        <div class="card">
-          <div class="card-body">
-            <ul id="conteudoLista">
-              <!-- Itens serão inseridos via JS ou manualmente -->
-            </ul>
-          </div>
-        </div>
-      </section>
+    <nav class="breadcrumb">
+        <a href="index.html">Página Principal</a>
+    </nav>
 
-    </div>
-  </main>
+    <main>
+        <section class="video-section">
+            <h2 class="section-title">Assista ao Conteúdo em Vídeo</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
 
-  <!-- Rodapé (igual ao original) -->
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 Conteúdo Programático CT&I. Todos os direitos reservados.</p>
-      <p>Desenvolvido com ❤️ para estudantes e profissionais da área pública.</p>
-    </div>
-  </footer>
+        <section class="content-section">
+            <h2 class="section-title">Material de Estudo</h2>
+            <div class="study-material">
+                <p>Este é um espaço para o conteúdo detalhado sobre o tópico. Você pode adicionar texto, imagens e outros elementos para enriquecer o material de estudo.</p>
+                
+                <p>Por exemplo, aqui pode-se detalhar os pontos do "Desafios do Estado de Direito" como a "Formação histórica do Estado Democrático de Direito" ou a "Constituição Federal de 1988".</p>
+            </div>
+        </section>
 
-  <!-- Script (opcional: para interações futuras) -->
-  <script>
-    // Função para carregar dados dinâmicos (ex: título, lista, vídeo)
-    document.addEventListener("DOMContentLoaded", function () {
-      const titulo = document.getElementById("titulo-secao");
-      const lista = document.getElementById("conteudoLista");
-      const videoContainer = document.getElementById("videoContainer");
+        <section class="return-home">
+            <a href="index.html">Voltar para a Página Principal</a>
+        </section>
+    </main>
 
-      // Exemplo de preenchimento automático (pode ser substituído por JSON externo)
-      titulo.textContent = "1. Desafios do Estado de Direito: democracia e cidadania.";
+    <footer>
+        <p>© 2025 Conteúdo Programático CT&I. Todos os direitos reservados.</p>
+        <p>Desenvolvido com ❤️ para estudantes e profissionais da área pública.</p>
+    </footer>
 
-      // Lista de itens (subtópicos)
-      const itens = [
-        "Formação histórica do Estado Democrático de Direito.",
-        "Constituição Federal de 1988: direitos fundamentais, sociais e políticos, consolidação da democracia, representação política e participação cidadã.",
-        "Relações entre os Poderes Executivo e Legislativo e os desafios da governabilidade.",
-        "Judicialização de políticas públicas.",
-        "Capacidades estatais e democracia.",
-        "Efetivação e reparação de Direitos Humanos: demandas sociais históricas, autoritarismo, violência de Estado, memória, verdade e justiça."
-      ];
-
-      // Preenche a lista
-      itens.forEach(item => {
-        const li = document.createElement("li");
-        li.textContent = item;
-        lista.appendChild(li);
-      });
-
-      // Adiciona um vídeo exemplo (descomente para usar)
-      /*
-      const iframe = document.createElement("iframe");
-      iframe.width = "100%";
-      iframe.height = "315";
-      iframe.src = "https://www.youtube.com/embed/dQw4w9WgXcQ"; // Substitua pelo seu vídeo
-      iframe.frameBorder = "0";
-      iframe.allowFullscreen = true;
-      iframe.title = "Vídeo explicativo sobre democracia e cidadania";
-      videoContainer.appendChild(iframe);
-      */
-    });
-  </script>
-
+    <script src="script.js"></script>
 </body>
 </html>
