--- a/pages1/parte2.html
+++ b/pages1/parte2.html
@@ -24,7 +24,7 @@
         <section class="video-section">
             <h3 class="section-title">Assista ao Conteúdo em Vídeo</h3>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/X4f-KErPdZ8?si=iSAu3nznhrs2W3n3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
