Alteração de texto

--- a/pages1/etica.html
+++ b/pages1/etica.html
@@ -34,9 +34,7 @@
                  <h3>3. Ética e Integridade</h3>
 
   <h4>3.1. Princípios e valores éticos do serviço público, seus direitos e deveres</h4>
-  <p>
-    A ética no serviço público refere-se ao conjunto de valores, normas e princípios que orientam a conduta dos agentes públicos no exercício de suas funções...
-  </p>
+  <p>A ética no serviço público é, de facto, um conjunto de valores, normas e princípios que orientam a conduta dos agentes públicos no desempenho das suas funções, visando a integridade, a imparcialidade, a honestidade, a transparência e a responsabilidade na administração dos recursos públicos e na prestação de serviços à sociedade. Este conjunto de preceitos está alinhado com os princípios da legalidade, impessoalidade, moralidade, publicidade e eficiência estabelecidos na Constituição Federal brasileira de 1988, e manifesta-se em códigos de conduta e outras normas específicas de cada órgão público.</p>
 
   <h4>3.2. Governança pública e sistemas de governança</h4>
   <p>
