--- a/pages1/parte4.html
+++ b/pages1/parte4.html
@@ -8,9 +8,39 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-        <h1>Parte 4</h1>
 
-     <footer>
+    <header>
+        <div class="header-container">
+            <h1>Título do Subtítulo</h1>
+            <p>Conteúdo Programático · CT&I</p>
+        </div>
+    </header>
+
+    <nav class="breadcrumb">
+        <a href="../index.html">Página Principal</a>
+    </nav>
+
+    <main>
+        <section class="video-section">
+            <h2 class="section-title">Assista ao Conteúdo em Vídeo</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <section class="content-section">
+            <h2 class="section-title">Material de Estudo</h2>
+            <div class="study-material">
+                <p>Diversidade e Inclusão social</p>
+            </div>
+        </section>
+
+        <section class="return-home">
+            <a href="../index.html">Voltar para a Página Principal</a>
+        </section>
+    </main>
+
+    <footer>
         <p>© 2025 Conteúdo Programático CT&I. Todos os direitos reservados.</p>
         <p>Desenvolvido com ❤️ para estudantes e profissionais da área pública.</p>
     </footer>
