Criação de nova página

--- a/index.html
+++ b/index.html
@@ -72,21 +72,9 @@
         <section class="content-section">
             <h2 class="section-title">CONHECIMENTOS ESPECÍFICOS</h2>
             <div class="content-grid">
-                <button class="accordion" data-topic="Eixo Temático 1">EIXO TEMÁTICO 1 – CIÊNCIA, TECNOLOGIA E SOCIEDADE (CTS)</button>
+                 <a href="pages2/topico1.html"><button class="accordion" data-topic="Eixo Temático 1">EIXO TEMÁTICO 1 – CIÊNCIA, TECNOLOGIA E SOCIEDADE (CTS)</button></a>
                 <div class="panel">
-                    <p>1. Fundamentos da abordagem CTS.</p>
-                    <p>1.1. Paradigmas, conceitos, origens e evolução;</p>
-                    <p>1.2. Modelos e concepções de inovação tecnológica.</p>
-                    <p>1.3. Pensamento crítico sobre os impactos e responsabilidades sociais relacionados à ciência e tecnologia.</p>
-                    <p>1.4. Interações entre ciência, tecnologia, cultura e valores sociais.</p>
-                    <p>1.5. A relação entre desenvolvimento tecnológico e desenvolvimento social.</p>
-                    <p>1.6. Ética em pesquisa científica.</p>
-                    <p>1.6.1. Comitês de ética.</p>
-                    <p>1.6.2. Consentimento livre e esclarecido.</p>
-                    <p>1.6.3. Integridade na produção de dados e resultados.</p>
-                    <p>1.7. Popularização da ciência, educação científica e engajamento público.</p>
-                    <p>1.8. Desigualdades no acesso à ciência e tecnologia: questões de gênero, raça e território.</p>
-                    <p>1.9. Ciência aberta, acesso livre à informação científica e reprodutibilidade.</p>
+                   
                 </div>
                 
                 <button class="accordion" data-topic="Eixo Temático 2">EIXO TEMÁTICO 2 – POLÍTICAS PÚBLICAS DE CIÊNCIA, TECNOLOGIA E INOVAÇÃO (CT&I)</button>
