--- a/pages2/topico1.html
+++ b/pages2/topico1.html
@@ -54,9 +54,9 @@
 
 <h3>1.5 A relação entre desenvolvimento tecnológico e desenvolvimento social</h3>
 
-<p>O desenvolvimento tecnológico é frequentemente associado ao progresso social, mas essa relação não é automática. Enquanto algumas inovações contribuem para melhorias na saúde, comunicação e transporte, outras ampliam desigualdades e criam novos desafios éticos. O desenvolvimento social depende, portanto, da capacidade de orientar as inovações tecnológicas para fins que priorizem a equidade, a sustentabilidade e a inclusão social.</div>p>
+<p>O desenvolvimento tecnológico é frequentemente associado ao progresso social, mas essa relação não é automática. Enquanto algumas inovações contribuem para melhorias na saúde, comunicação e transporte, outras ampliam desigualdades e criam novos desafios éticos. O desenvolvimento social depende, portanto, da capacidade de orientar as inovações tecnológicas para fins que priorizem a equidade, a sustentabilidade e a inclusão social.</p>
 
-<h3> Ética em pesquisa científica</h3>
+<h3> 1.6 Ética em pesquisa científica</h3>
 
 <p>A ética em pesquisa científica busca garantir que o conhecimento seja produzido de forma responsável, respeitando direitos humanos, animais, ambientais e sociais. Trata-se de assegurar que a ciência não apenas avance tecnicamente, mas também promova valores de justiça e integridade.</p>
 
