--- a/index.html
+++ b/index.html
@@ -82,15 +82,9 @@
 
                 </div>
                 
-                <button class="accordion" data-topic="Eixo Temático 3">EIXO TEMÁTICO 3 – GESTÃO DE PROJETOS EM CIÊNCIA, TECNOLOGIA E INOVAÇÃO (CT&I)</button>
+                <a href="pages2/topico3.html"><button class="accordion" data-topic="Eixo Temático 3">EIXO TEMÁTICO 3 – GESTÃO DE PROJETOS EM CIÊNCIA, TECNOLOGIA E INOVAÇÃO (CT&I)</button></a>
                 <div class="panel">
-                    <p>1. Fundamentos e práticas de gestão de projetos.</p>
-                    <p>1.1. Conceitos básicos de gestão de projetos em CT&I.</p>
-                    <p>1.2. Definição de projeto e características principais.</p>
-                    <p>1.3. Ciclo de vida de um projeto: Iniciação, Planejamento, Execução, Monitoramento e controle, e Encerramento.</p>
-                    <p>2. Noções de gestão de escopo, tempo, custo, qualidade, recursos, comunicações, riscos, aquisições e stakeholders de projetos.</p>
-                    <p>2.1. Ferramentas e métodos de gestão de projetos: Gráficos de Gantt, PERT/CPM, Matriz RACI, Kanban e SCRUM.</p>
-                    <p>3. Gestão da Inovação e do Conhecimento em projetos de CT&I.</p>
+                    
                 </div>
 
                 <button class="accordion" data-topic="Eixo Temático 4">EIXO TEMÁTICO 4 – TECNOLOGIAS DA INFORMAÇÃO E COMUNICAÇÃO (TICs) & CIÊNCIA DE DADOS</button>
