Criação de nova página

--- a/index.html
+++ b/index.html
@@ -87,18 +87,9 @@
                     
                 </div>
 
-                <button class="accordion" data-topic="Eixo Temático 4">EIXO TEMÁTICO 4 – TECNOLOGIAS DA INFORMAÇÃO E COMUNICAÇÃO (TICs) & CIÊNCIA DE DADOS</button>
+                <a href="pages2/topico4.html"><button class="accordion" data-topic="Eixo Temático 4">EIXO TEMÁTICO 4 – TECNOLOGIAS DA INFORMAÇÃO E COMUNICAÇÃO (TICs) & CIÊNCIA DE DADOS</button></a>
                 <div class="panel">
-                    <p>1. Fundamentos e aplicações de TICs e ciência de dados.</p>
-                    <p>1.1. Fundamentos das Tecnologias da Informação e Comunicação (TICs).</p>
-                    <p>1.2. Transformação digital na administração pública e nas instituições científicas: Estratégia Federal de Governo Digital e Dados como ativo estratégico para políticas públicas.</p>
-                    <p>2. Conceitos e aplicações de ciência de dados, Big Data e Internet das Coisas (IoT).</p>
-                    <p>2.1. Inteligência artificial, aprendizado de máquina e análise preditiva.</p>
-                    <p>2.2. Ética, vieses algorítmicos e impactos sociais da IA.</p>
-                    <p>3. Governança de dados, interoperabilidade de sistemas e Lei Geral de Proteção de Dados (LGPD).</p>
-                    <p>4. Visualização e interpretação de dados em contextos de pesquisa e gestão pública.</p>
-                    <p>5. Uso de dados para formulação, monitoramento e avaliação de políticas públicas.</p>
-                    <p>6. Dados abertos e transparência na gestão pública.</p>
+                  
                 </div>
 
                 <button class="accordion" data-topic="Eixo Temático 5">EIXO TEMÁTICO 5 – METODOLOGIA DA PESQUISA CIENTÍFICA</button>
