Criação de nova página

--- a/index.html
+++ b/index.html
@@ -92,18 +92,9 @@
                   
                 </div>
 
-                <button class="accordion" data-topic="Eixo Temático 5">EIXO TEMÁTICO 5 – METODOLOGIA DA PESQUISA CIENTÍFICA</button>
+                <a href="pages2/topico5.html"><button class="accordion" data-topic="Eixo Temático 5">EIXO TEMÁTICO 5 – METODOLOGIA DA PESQUISA CIENTÍFICA</button></a>
                 <div class="panel">
-                    <p>1. Fundamentos e práticas de pesquisa científica.</p>
-                    <p>1.1. Finalidades da pesquisa científica: Pesquisa básica, Aplicada, Exploratória, Descritiva e Explicativa.</p>
-                    <p>2. Classificação quanto à abordagem: Qualitativa, Quantitativa e Mista.</p>
-                    <p>2.4. Métodos científicos: Indutivo, Dedutivo e Hipotético-dedutivo.</p>
-                    <p>2.8. Tipos de pesquisa: Estudos de caso, Pesquisa-ação, Levantamento, Pesquisa experimental e quase-experimental, Revisão de literatura, Revisão bibliográfica e Revisão sistemática e integrativa.</p>
-                    <p>3. Elementos do projeto de pesquisa: Tema, Problema, Justificativa, Objetivos, Hipóteses, Metodologia e Instrumentos de coleta de dados (Entrevistas, Questionário, Observação, Formulários, Análise documental).</p>
-                    <p>4. Procedimentos de coleta de dados em pesquisa qualitativa e quantitativa.</p>
-                    <p>4.1. Redação científica.</p>
-                    <p>4.2. Estrutura de artigos e relatórios técnicos.</p>
-                    <p>4.3. Normas da ABNT, APA, Vancouver e outras.</p>
+                    
                 </div>
             </div>
         </section>
