Criação de nova página

--- a/pages1/parte1.html
+++ b/pages1/parte1.html
@@ -11,8 +11,9 @@
 
     <header>
         <div class="header-container">
-            <h1>DESAFIOS DO ESTADO DE DIREITO: DEMOCRACIA E CIDADANIA</h1>
-            <p>Criação da "Constituição cidadã"· CT&I</p>
+           <h1>Desafios do Estado de Direito: Democracia e Cidadania</h1>
+            <p>Conteúdo Programático · CT&I</p>
+            <h3>CONHECIMENTOS GERAIS</h3> 
         </div>
     </header>
 
