--- a/pages1/parte3.html
+++ b/pages1/parte3.html
@@ -13,6 +13,7 @@
         <div class="header-container">
             <h1>Ética e Integridade</h1>
             <p>Conteúdo Programático · CT&I</p>
+            <h3>CONHECIMENTOS GERAIS</h3>            
         </div>
     </header>
 
