Criação de nova página

--- a/pages1/parte4.html
+++ b/pages1/parte4.html
@@ -11,8 +11,9 @@
 
     <header>
         <div class="header-container">
-            <h1>Título do Subtítulo</h1>
+            <h1>Diversidade e Inclusão na Sociedade</h1>
             <p>Conteúdo Programático · CT&I</p>
+            <h3>CONHECIMENTOS GERAIS</h3> 
         </div>
     </header>
 
@@ -24,14 +25,29 @@
         <section class="video-section">
             <h2 class="section-title">Assista ao Conteúdo em Vídeo</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iBgde5cCKio?si=KY04KuzFVkTqKE3V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
         <section class="content-section">
             <h2 class="section-title">Material de Estudo</h2>
             <div class="study-material">
-                <p>Diversidade e Inclusão social</p>
+                <h3>Diversidade de Sexo, Gênero e Sexualidade</h3>
+<p>O conceito de diversidade refere-se à qualidade ou condição do que é diverso, englobando diferenças de sexo, gênero, sexualidade, características étnico-raciais e culturais. Para Hegel, os seres humanos são diversos porque, ao mesmo tempo em que são iguais em racionalidade e liberdade, também são desiguais em graus de desenvolvimento de suas potencialidades.</p>
+
+<p>Exemplos normativos incluem a Convenção da UNESCO sobre a Diversidade das Expressões Culturais e o PNDH-3, que busca garantir a igualdade na diversidade.</p>
+
+<h3>Sexo, Gênero e Sexualidade</h3>
+<p>Sexo refere-se às características anatômicas e biológicas, enquanto gênero envolve aspectos sociais, culturais e psicológicos associados ao masculino e feminino. A sexualidade abrange orientação sexual, ou seja, a atração afetiva, emocional e sexual por pessoas de um ou mais gêneros.</p>
+
+<h3>Igualdade de Gênero</h3>
+<p>A igualdade de gênero é tratada em documentos históricos como a Declaração dos Direitos da Mulher e da Cidadã (1791), no socialismo do século XIX e em instrumentos internacionais como a Declaração Universal dos Direitos Humanos, que garante liberdade e igualdade em dignidade e direitos.</p>
+
+<h3>Sistema Internacional e Interamericano</h3>
+<p>O Tribunal Penal Internacional julga crimes contra a humanidade, incluindo perseguição por motivos de gênero. No âmbito interamericano, a Convenção de Belém do Pará define violência contra a mulher como qualquer ação baseada em gênero que cause morte, dano ou sofrimento físico, sexual ou psicológico.</p>
+
+<h3>Legislação Brasileira</h3>
+<p>A Constituição Federal garante a dignidade da pessoa humana, a igualdade de todos perante a lei e prevê que o racismo constitui crime inafiançável e imprescritível. O STF reconheceu a união estável entre casais homoafetivos e determinou a aplicação da Lei do Racismo (Lei nº 7.716/1989) aos casos de homofobia e transfobia.</p>
             </div>
         </section>
 
