--- a/pages1/parte5.html
+++ b/pages1/parte5.html
@@ -25,14 +25,22 @@
         <section class="video-section">
             <h2 class="section-title">Assista ao Conteúdo em Vídeo</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vVLG4ySR8fo?si=g10qmoNwUhOgnxZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
         <section class="content-section">
             <h2 class="section-title">Material de Estudo</h2>
             <div class="study-material">
-                <p>Administração Pública Federal.<p>
+               <h3>5. Administração Pública Federal</h3> <p>A Administração Pública Federal compreende o conjunto de órgãos, entidades e agentes que atuam na execução das políticas públicas e na prestação de serviços à sociedade, sob a égide da Constituição Federal. Seu funcionamento está pautado por princípios constitucionais, normas legais e estruturas organizacionais que visam garantir eficiência, legalidade e transparência na gestão pública.</p>
+
+<h3>5.1. Princípios constitucionais e normas que regem a administração pública</h3> <p>Os princípios constitucionais que regem a Administração Pública estão previstos no artigo 37 da Constituição Federal de 1988 e incluem a legalidade, impessoalidade, moralidade, publicidade e eficiência. Esses princípios orientam a conduta dos agentes públicos e a formulação de políticas administrativas. Além disso, a administração pública é regulada por normas infraconstitucionais, como a Lei nº 8.666/1993 (Lei de Licitações), a Lei nº 9.784/1999 (Processo Administrativo Federal) e a Lei nº 14.133/2021 (Nova Lei de Licitações e Contratos).</p>
+
+<h3>5.2. Evolução das reformas da administração e do serviço público no Brasil e estrutura organizacional da Administração Pública Federal</h3> <p>As reformas administrativas no Brasil têm sido marcadas por diferentes momentos históricos, como a Reforma Burocrática de 1936, a Reforma Gerencial de 1995 e iniciativas recentes voltadas à digitalização e desburocratização. A estrutura organizacional da Administração Pública Federal é composta pela administração direta, que inclui os ministérios e secretarias, e pela administração indireta, formada por autarquias, fundações, empresas públicas e sociedades de economia mista. Essas estruturas visam atender às demandas da sociedade com maior especialização e eficiência.</p>
+
+<h3>5.3. Sistemas estruturantes da administração pública federal</h3> <p>Os sistemas estruturantes são instrumentos essenciais para a gestão pública federal. Entre eles destacam-se o Sistema de Administração Financeira (SIAFI), o Sistema Integrado de Recursos Humanos (SIAPE), o Sistema de Convênios (SICONV) e o Sistema de Planejamento e Orçamento Federal (SIOP). Esses sistemas promovem a integração, o controle e a transparência das ações governamentais, permitindo melhor acompanhamento da execução orçamentária, financeira e administrativa.</p>
+
+<h3>5.4. Fundamentos das finanças públicas, tributação e do planejamento-orçamento (Plano Plurianual, Lei de Diretrizes Orçamentárias e Lei Orçamentária Anual)</h3> <p>As finanças públicas envolvem a arrecadação de receitas e a alocação de despesas pelo Estado, com base em princípios como equilíbrio fiscal, responsabilidade e transparência. A tributação é o principal mecanismo de arrecadação, regida por normas constitucionais e infraconstitucionais. O planejamento-orçamento é estruturado em três instrumentos principais: o Plano Plurianual (PPA), que define as diretrizes e objetivos de médio prazo; a Lei de Diretrizes Orçamentárias (LDO), que orienta a elaboração da Lei Orçamentária Anual (LOA); e a LOA, que detalha as receitas e despesas previstas para o exercício financeiro. Esses instrumentos garantem a coerência entre planejamento e execução das políticas públicas.</p>
             </div>
         </section>
 
